# to-do-list

./: CMakeLists.txt  README.md
modules/core/: core.cpp  core.h
modules/database/: db_notepad.cpp  db_notepad.h
modules/start/: main.cpp
